# srtnr

./: .gitignore  .travis.yml  Cargo.toml  Makefile  README.md  configure  meson.build  vendor_config
.cargo/: config
data/: com.github.arshubham.srtnr.appdata.xml  com.github.arshubham.srtnr.desktop  com.github.arshubham.srtnr.gschema.xml  meson.build
debian/: changelog  control  copyright  rules
scripts/: cargo.sh  new-release.sh  release.sh
src/: headerbar.rs  main.rs
src/buildui/: mod.rs
src/buildui/headerbar/: mod.rs
src/buildui/prefdialog/: mod.rs
src/widgets/: headerbar.rs
srtnr-gtk/: Cargo.toml
srtnr-gtk/res/: com.github.arshubham.srtnr.appdata.xml  com.github.arshubham.srtnr.desktop  meson.build
srtnr-gtk/src/: main.rs
